# daro-utils

./: .gitignore  daro-utils.e4p  pyproject.toml
bld/xpyze/: SConstruct  xpyze.sas
bld/xpyze/test/: SilDB2.wdsl  curl.txt  sfinx.wdsl  soap-message-10.xml  soap-reply.utf8.xml  soap-reply.xml
src/: setup.py
src/modules/: 1.xml  4521.xml  monitoring.py  setup.py  simplegit.py  xpyze.py
src/modules/tracrpc_client/: __init__.py
src/scripts/: dbmove.py  pyze.py  sample_files.py  xpyze.sh
tests/python_compat/: Dockerfile.py2  Dockerfile.py3  README.md  test_monitoring_py2.py  test_monitoring_py3.py
